--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -5,7 +5,6 @@
 
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <img src="{% static 'images/logo.png' %}" class="img-fluid" alt="DjangoX logo"/>
-  <p class="lead">A Django starter project with batteries.</p>
+  <p class="lead">Poseidon</p>
 </div>
 {% endblock content %}
